fix size on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -65,3 +65,13 @@ img {
 footer {
     color: white!important;
 }
+
+@media only screen and (max-width: 600px) {
+    .card {
+        display: inline-block!important;
+        height: 80px!important;
+        width: 80px!important;
+        background-color: #7EBCF2!important;
+        border-radius: 0!important;
+    }
+}
